--- a/Client Android/MShiper1/app/src/main/res/layout/activity_login.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/activity_login.xml
@@ -61,7 +61,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Mật khẩu"
-                        android:inputType="textEmailAddress" />
+                        android:inputType="textPassword" />
 
                 </android.support.design.widget.TextInputLayout>
 
