--- a/Client Android/MShiper1/app/src/main/res/layout/content_mshipper1.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/content_mshipper1.xml
@@ -38,6 +38,12 @@
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
+            <Button
+                android:id="@+id/btnLogout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Log out" />
+
             <android.support.design.widget.TabLayout
                 android:id="@+id/tablayout"
                 style="@style/CustomTabTexStyle"
