--- a/Client Android/MShiper1/app/src/main/res/values/styles.xml
+++ b/Client Android/MShiper1/app/src/main/res/values/styles.xml
@@ -30,4 +30,9 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <!-- Splash Screen theme. -->
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_background</item>
+    </style>
+
 </resources>
