--- a/Client Android/MShiper1/app/src/main/res/layout/content_mshipper.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/content_mshipper.xml
@@ -33,14 +33,15 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:showIn="@layout/app_bar_mshipper1">
 
-            <FrameLayout
-                android:id="@+id/container_fragment"
+            <com.example.dangvanan14.mshiper1.customview.CustomViewPager
+                android:id="@+id/viewpager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/bottomBar"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:weightSum="1" />
+                android:layout_alignParentTop="true">
+
+            </com.example.dangvanan14.mshiper1.customview.CustomViewPager>
 
             <com.roughike.bottombar.BottomBar
                 android:id="@+id/bottomBar"
