--- a/Client Android/MShiper1/app/src/main/res/layout/fragment_more.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/fragment_more.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_order"
+        android:id="@+id/rv_more"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_order">
