--- a/Client Android/MShiper1/app/src/main/res/layout/item_chat2.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/item_chat2.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
+        android:gravity="end"
         android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -19,9 +20,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2.5dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="2.5dp"
+        card_view:cardBackgroundColor="#5781ff"
         card_view:cardCornerRadius="10dp">
 
         <LinearLayout
@@ -38,7 +40,8 @@
                 android:id="@+id/message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa" />
+                android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa"
+                android:textColor="@android:color/white" />
 
             <TextView
                 android:id="@+id/time_send"
@@ -47,6 +50,7 @@
                 android:layout_gravity="end"
                 android:layout_marginTop="4dp"
                 android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa"
+                android:textColor="@android:color/white"
                 android:textSize="12sp" />
 
             <TextView
@@ -56,6 +60,7 @@
                 android:layout_gravity="end"
                 android:layout_marginTop="4dp"
                 android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa"
+                android:textColor="@android:color/white"
                 android:textSize="12sp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
