--- a/Client Android/MShiper1/app/src/main/res/layout/item_more.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/item_more.xml
@@ -18,9 +18,10 @@
 
     <TextView
         android:id="@+id/name_more"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="Chat"
+        android:layout_weight="0.9"
         android:textSize="21sp" />
 </LinearLayout>
