--- a/Client Android/MShiper1/app/src/main/res/layout/activity_assign_driver_detail.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/activity_assign_driver_detail.xml
@@ -23,6 +23,33 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_assign_driver"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/item_assign_driver" />
+        android:layout_height="0dp"
+        android:layout_weight="0.9"
+        tools:listitem="@layout/item_assign_driver_detail" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <Button
+            android:id="@+id/btn_confirm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:backgroundTint="@color/yellow"
+            android:text="Xác nhận"
+            tools:ignore="NestedWeights" />
+
+        <Button
+            android:id="@+id/btn_extend"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:backgroundTint="@android:color/holo_red_light"
+            android:text="Gia hạn"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
 </LinearLayout>
