--- a/Client Android/MShiper1/app/src/main/res/layout/item_assign_driver_detail.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/item_assign_driver_detail.xml
@@ -14,6 +14,7 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="8dp"
+        android:id="@+id/layout_assign_driver_detail"
         android:weightSum="1">
 
         <TextView
