--- a/Client Android/MShiper1/app/src/main/res/values/colors.xml
+++ b/Client Android/MShiper1/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="Teal">#008080</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="white">#FFFFFF</color>
 </resources>
